# Rust.Nmap.Network

./: .gitignore  README.md  TESTS.md
.github/: FUNDING.yml  README.md
commander/: Cargo.toml  Makefile
commander/src/: main.rs
commander/static/css/: dashboard.css
commander/static/js/: dashboard.js
commander/templates/snort/: level1_minimal.rules  level2_basic.rules  level3_moderate.rules  level4_strict.rules  level5_paranoid.rules
commander/templates/suricata/: level1_minimal.rules  level2_basic.rules  level3_moderate.rules  level4_strict.rules  level5_paranoid.rules
commander/templates/zeek/: level1_minimal.zeek  level2_basic.zeek  level3_moderate.zeek  level4_strict.zeek  level5_paranoid.zeek
commander/tests/: integration_tests.rs
kibana-lab/: docker-compose.yml
kibana-lab/filebeat/: filebeat.yml
scripts/: README.md  fragment_attack.py
scripts/legacy/: quick_test.sh  scan_all_levels.sh  start_all_labs.sh  stop_all_labs.sh
scripts/lua/: fragment_attack.lua  quick_test.lua  scan_all_levels.lua  start_all_labs.lua  stop_all_labs.lua
snort-lab/: docker-compose.yml
snort-lab/config/: local.rules  snort.lua
snort-lab/logs/: alert_fast_sample.txt
suricata-lab/: docker-compose.yml
suricata-lab/logs/: eve_sample.json
suricata-lab/rules/: suricata.rules
target-server/: Dockerfile  nginx.conf  start.sh  vsftpd.conf
target-server/html/: index.html  robots.txt
tests/: README.md  e2e_tests.sh  nmap_detection_test.sh
tests/lua/: run_all.lua  test_kibana.lua  test_snort.lua  test_suricata.lua  test_zeek.lua
tests/lua/lib/: test_utils.lua
tests/sh/: kibana_lab_test.sh
zeek-lab/: docker-compose.yml
zeek-lab/scripts/: local.zeek
